<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/single_item_id"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/one"
            android:id="@+id/item_imageview"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:layout_below="@id/item_imageview"
            android:paddingRight="10dp"
            android:textColor="#000"
            android:textSize="23dp"
            android:id="@+id/item_name"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
