...
                android:layout_margin="90dp"
                android:layout_gravity="center"
                android:scrollbarSize="25dp"
                android:id="@+id/steps_progres_bar"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/steps_recycler_view"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
...
